--- a/touch/index.html
+++ b/touch/index.html
@@ -23,7 +23,7 @@
     }
     </style>
 </head>
-<body onselectstart ="return false;" onmousedown="return false;" oncontextmenu= "return false;">
+<body onselectbefore = "return false;">
     <div id='div'>
         <div id='divchild'>长按测试</div>
     </div>
