--- a/touch/index.html
+++ b/touch/index.html
@@ -23,7 +23,7 @@
     }
     </style>
 </head>
-<body onselectbefore = "return false;">
+<body ontouchstart = "return false;">
     <div id='div'>
         <div id='divchild'>长按测试</div>
     </div>
