--- a/touch/index.html
+++ b/touch/index.html
@@ -23,7 +23,7 @@
     }
     </style>
 </head>
-<body ontouchstart = "return false;">
+<body ontouchstart = "return false;">   <!-- ontouchstart屏蔽弹出菜单，消除可能的菜单影响原因 -->
     <div id='div'>
         <div id='divchild'>长按测试</div>
     </div>
@@ -37,14 +37,20 @@
         window.onload = function(){
             var div = document.getElementById('div');
             var child = document.getElementById('divchild');
-            div.addEventListener('touchstart',function(e){
+            document.addEventListener('touchstart',function(e){
                 setTimeout(function(){
-                    child.remove();
+                   child.parentNode && child.parentNode.removeChild(child);
                 },500);
                 divconsole('触发了touchstart...');
             });
-            div.addEventListener('touchend',function(e){
+            document.addEventListener('touchmove',function(e){
+                divconsole('触发了touchmove...');
+            });
+            document.addEventListener('touchend',function(e){
                 divconsole('触发了touchend...');
+            });
+            document.addEventListener('touchcancel',function(e){
+                divconsole('触发了touchcancel...');
             });
         }
     </script>
